vllm/vllm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-openai-service
  namespace: kigawa-net-llm
  labels:
    app: vllm
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
    - name: dashboard
      port: 8265
      targetPort: 8265
      protocol: TCP
  selector:
    app: vllm
  type: ClusterIP
